gcc/testsuite/gdc.test/compilable/imports/imp16080.d
struct A() {
	static immutable A a;
}
