gcc/testsuite/gdc.test/fail_compilation/failinout3748a.d
struct S3748
{
    inout(int) err8;
}
